--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "require": {
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.1",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.25",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "protonemedia/laravel-splade-breeze": "^2.5"
+        "protonemedia/laravel-splade-breeze": "^2.5",
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
