--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "blade-ui-kit/blade-heroicons": "^2.1",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "kavist/rajaongkir": "1.1",
         "laravel/framework": "^10.25",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
